--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.1",
     "http-proxy-middleware": "^2.0.6",
     "mongoose": "^6.3.2",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "react-icons": "^4.3.1"
   }
 }
