--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
     "nodemon": "^2.0.16",
+    "react-cookie": "^4.1.1",
     "react-icons": "^4.3.1"
   }
 }
