--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "http-proxy-middleware": "^2.0.6",
+    "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
     "nodemon": "^2.0.16",
     "react-cookie": "^4.1.1",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-select": "^5.3.2"
   }
 }
