--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-speech-recognition": "^3.9.1",
+    "react-wordcloud": "^1.2.7",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
