--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-wordcloud": "^1.2.7",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
