--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,13 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@vladmandic/face-api": "^1.7.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.9.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
