--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "fluent-ffmpeg": "^2.1.2",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16",
     "react-cookie": "^4.1.1",
     "react-icons": "^4.3.1",
