--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@vladmandic/face-api": "^1.7.3",
+    "antd": "^4.23.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.9.1",
+    "get-blob-duration": "^1.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
     "react-chartjs-2": "^4.3.1",
