--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-speech-recognition": "^3.9.1",
+    "react-to-print": "^2.14.7",
     "react-wordcloud": "^1.2.7",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
