--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16",
     "react-cookie": "^4.1.1",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
-    "react-select": "^5.3.2"
+    "react-select": "^5.3.2",
+    "react-to-print": "^2.14.7"
   }
 }
