승원/image 오류 및 home 경로 수정

--- a/client/package.json
+++ b/client/package.json
@@ -69,5 +69,5 @@
   "devDependencies": {
     "gh-pages": "^4.0.0"
   },
-  "homepage": "http://cbnucapstone.github.io/Inpporter"
+  "homepage": "http://cbnucapstone.github.io/Inpporter/"
 }
